# usehub

./: .env.example  .gitignore  README.md  docker-compose.yml  fly.toml  install.sh
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4191a1c88000_initial_schema.py
backend/app/: config.py  main.py
backend/app/db/: base.py  redis.py  seed.py  session.py
backend/app/db/models/: __init__.py  case_study.py  engagement.py  notification.py  profile.py  social.py  user.py
backend/app/middleware/: input_size.py  rate_limit.py
backend/app/modules/auth/: dependencies.py  router.py  service.py  session.py
backend/app/modules/case_studies/: router.py  schemas.py  service.py
backend/app/modules/engagement/: router.py  schemas.py  service.py
backend/app/modules/feed/: router.py
backend/app/modules/media/: router.py
backend/app/modules/notifications/: consumer.py  router.py
backend/app/modules/search/: router.py
backend/app/modules/users/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_dev_login.py  test_health.py
docs/plans/: 2026-05-23-system-architecture.md  2026-05-25-dev-password-login.md  2026-05-25-install-script-autostart.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: auth-provider.tsx  avatar-upload.tsx  case-study-card.tsx  case-study-form.tsx  comments.tsx  notification-bell.tsx  reaction-bar.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: api.ts  utils.ts
(+11 files in other folders)
