[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "usehub-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.5.0",
    "python-multipart>=0.0.9",
    "bleach>=6.1.0",
    "python-slugify>=8.0.4",
    "boto3>=1.34.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM105", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
